Fixed bug #33277 (private method accessed by child class)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@188610 c90b9560-bf6c-de11-be94-00142212c4b1